<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_sell_product"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:weightSum="12.5">

    <EditText
        android:id="@+id/pName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/product_name"
        android:inputType="text"
        android:padding="8dp" />

    <EditText
        android:id="@+id/bName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/brand_name"
        android:inputType="text"
        android:padding="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:padding="8dp">

        <Spinner
            android:id="@+id/gender"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/size"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/quantity"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/enter_quantity" />
    </LinearLayout>

    <EditText
        android:id="@+id/product_category"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/product_category"
        android:padding="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="4dp">

        <EditText
            android:id="@+id/product_price"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/price"
            android:padding="4dp" />

        <EditText
            android:id="@+id/product_discount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/discount"
            android:padding="4dp" />
    </LinearLayout>

    <Button
        android:id="@+id/choose_image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp"
        android:text="@string/choose_image" />


    <!-- add 3 lines in the description  -->
    <EditText
        android:id="@+id/product_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.5"
        android:hint="@string/description"
        android:lines="3"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:padding="8dp" />

    <EditText
        android:id="@+id/seller_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/seller_name"
        android:padding="8dp" />

    <Button
        android:id="@+id/sell"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="end"
        android:layout_weight="1"
        android:padding="8dp"
        android:text="@string/sell" />

</LinearLayout>